<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Menu button -->
    <!-- Menu Button at top-left -->
    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/dots"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- Sliding Menu Panel (initially hidden) -->
    <LinearLayout
        android:id="@+id/slidingMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        android:elevation="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="56dp"
        android:padding="8dp">

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:layout_marginTop="8dp" />
    </LinearLayout>


    <!-- App Logo -->
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:contentDescription="App Logo"
        android:scaleType="fitCenter"
        android:src="@drawable/applogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Tagline container below and aligned to the right of appLogo -->
    <LinearLayout
        android:id="@+id/taglineContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="@id/appLogo"
        app:layout_constraintEnd_toEndOf="@id/appLogo">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="उभरती प्रतिभा"
            android:textColor="#FF9933"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="बदलता भारत"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            android:layout_marginStart="4dp" />
    </LinearLayout>




    <!--Scrollable content -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:overScrollMode="always"
        app:layout_constraintTop_toBottomOf="@+id/taglineContainer"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title -->
            <TextView
                android:id="@+id/titleEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingTop="0dp"
                android:text="Events"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold|italic" />



            <!-- Cards Container -->
            <LinearLayout
                android:id="@+id/eventsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Card 1 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#E3F1F8"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="142dp"
                            android:scaleType="centerCrop"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/banner_img" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_title"
                            android:textSize="18sp"
                            android:textColor="#3E3E3E"
                            android:textStyle= "bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_date"
                            android:textSize="14sp"
                            android:textColor="#666666"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_description"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <!-- Card 2 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#E3F1F8"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="142dp"
                            android:scaleType="centerCrop"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/banner_img_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_title_2"
                            android:textSize="18sp"
                            android:textColor="#3E3E3E"
                            android:textStyle= "bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_date_2"
                            android:textSize="14sp"
                            android:textColor="#666666"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_2"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_description_2"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- card 3 -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="#E3F1F8"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="142dp"
                            android:scaleType="centerCrop"
                            android:layout_marginBottom="8dp"
                            android:src="@drawable/banner_img_3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_title_3"
                            android:textSize="18sp"
                            android:textColor="#3E3E3E"
                            android:textStyle= "bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_date_3"
                            android:textSize="14sp"
                            android:textColor="#666666"
                            android:layout_marginTop="4dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location_3"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/event_description_3"
                            android:textSize="14sp"
                            android:layout_marginTop="8dp"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:paddingVertical="12dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Profile -->
        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_profile"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="#050505"
                android:textSize="12sp" />
        </LinearLayout>

        <!--  Tests-->
        <LinearLayout
            android:id="@+id/testsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/running"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tests"
                android:textColor="#050505"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- events-->
        <LinearLayout
            android:id="@+id/eventsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/trophy"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Events"
                android:textColor="#050505"
                android:textSize="12sp" />
        </LinearLayout>
        <!-- rulebook-->
        <LinearLayout
            android:id="@+id/rulebookLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/document"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rulebook"
                android:textColor="#050505"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>